--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -28,7 +28,7 @@
                      <a class = "nav-link active" href = "index.html">Home</a>
                   </li>
                   <li class = "nav-item">
-                     <a class = "nav-link" href = "watchlist-static.html">Watchlist</a>
+                     <a class = "nav-link" href = "watchlist.html">Watchlist</a>
                   </li>
                   <li class = "nav-item ">
                      <a class = "nav-link" href = "watchlistItemForm-static.html">Submit an item</a>
