--- a/src/main/resources/templates/watchlistItemForm-static.html
+++ b/src/main/resources/templates/watchlistItemForm-static.html
@@ -23,7 +23,7 @@
                      <a class = "nav-link" href = "index.html">Home</a>
                   </li>
                   <li class = "nav-item">
-                     <a class = "nav-link" href = "watchlist-static.html">Watchlist</a>
+                     <a class = "nav-link" href = "watchlist.html">Watchlist</a>
                   </li>
                   <li class = "nav-item active">
                      <a class = "nav-link" href = "watchlistItemForm-static.html">Submit an item</a>
